Volume changes for both shared public folder and local development.

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -6,6 +6,8 @@ services:
       dockerfile: nginx.Dockerfile
       args:
         APP_NAME: caseydyer
+    volumes:
+      - ./catcms:/var/www
   caseydyer-app:
     build:
       context: catcms
