--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,32 @@
-version: "3.4"
+version: "3"
 services:
-  ingress:
+  nginx-proxy:
     image: jwilder/nginx-proxy
+    container_name: nginx-proxy
     ports:
       - 80:80
+      - 443:443
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
-  caseydyer-nginx:
-    image: dyersituations/catnginx:caseydyer
-    depends_on:
-      - caseydyer-app
-    ports:
-      - 81:80
-    restart: always
+      - letsencrypt-certs:/etc/nginx/certs
+      - letsencrypt-vhost-d:/etc/nginx/vhost.d
+      - letsencrypt-html:/usr/share/nginx/html
+  letsencrypt-proxy:
+    image: jrcs/letsencrypt-nginx-proxy-companion
+    container_name: letsencrypt-proxy
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - letsencrypt-certs:/etc/nginx/certs
+      - letsencrypt-vhost-d:/etc/nginx/vhost.d
+      - letsencrypt-html:/usr/share/nginx/html
     environment:
-      - VIRTUAL_HOST=caseydyer.com
-    volumes:
-      - caseydyer-public:/var/www/public
-  caseydyer-app:
-    image: dyersituations/catcms:latest
-    volumes:
-      - caseydyer-db:/var/www/db
-      - caseydyer-public:/var/www/public
-    restart: always
+      - DEFAULT_EMAIL=dyersituations@gmail.com
+      - NGINX_PROXY_CONTAINER=nginx-proxy
+networks:
+  default:
+    external:
+      name: nginx-proxy
 volumes:
-  caseydyer-db:
-  caseydyer-public:
+  letsencrypt-certs:
+  letsencrypt-vhost-d:
+  letsencrypt-html:
