Redirect www to non-www. Added annfleming.com.

--- a/default.conf
+++ b/default.conf
@@ -3,6 +3,11 @@ upstream rails_app {
 }
 
 server {
+  server_name www.$APP_NAME.com;
+  return 301 $scheme://$APP_NAME.com$request_uri;
+}
+
+server {
   listen 80;
 
   server_name $APP_NAME.com;
