--- a/caseydyer/docker-compose.yml
+++ b/caseydyer/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     environment:
       - RAILS_LOG_TO_STDOUT=true
     volumes:
-      - caseydyer-db:/var/www/db
+      - caseydyer-db:/var/www/db/sqlite3
       - caseydyer-public:/var/www/public
     networks:
       - app
