--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -5,7 +5,7 @@ on:
         required: true
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Check out catdocker repo
@@ -16,9 +16,9 @@ jobs:
           repository: dyersituations/catcms
       - name: Create .env file
         run: |
-          touch ${{ inputs.domain }}/.env
+          touch /${{ inputs.domain }}/.env
           echo RAILS_ENV=production >> .env
           echo SECRET_KEY_BASE=${{ github.sha }} >> .env
-          cat ${{ inputs.domain }}/.env
+          cat /${{ inputs.domain }}/.env
       - name: Build images
         run: docker-compose build -f "${{ inputs.domain }}/docker-compose.yml" --no-cache
