--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -9,16 +9,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out catdocker repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Check out catcms repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
           repository: dyersituations/catcms
       - name: Create .env file
         run: |
-          touch catdocker/${{ inputs.domain }}/.env
+          touch ${{ $GITHUB_WORKSPACE }}/catdocker/${{ inputs.domain }}/.env
           echo RAILS_ENV=production >> .env
           echo SECRET_KEY_BASE=${{ github.sha }} >> .env
-          cat /${{ inputs.domain }}/.env
+          cat ${{ $GITHUB_WORKSPACE }}/catdocker/${{ inputs.domain }}/.env
       # - name: Build images
       #   run: docker-compose build -f "catdocker/${{ inputs.domain }}/docker-compose.yml" --no-cache
