--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: dyersituations/catcms
-        working-directory: catcms
+        path: catcms
       - name: Create .env file
         run: |
           touch $GITHUB_WORKSPACE/${{ inputs.domain }}/.env
