--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -17,6 +17,8 @@ jobs:
           path: catcms
       - name: Create SECRET_KEY_BASE
         run: echo "SECRET_KEY_BASE=$(openssl rand -hex 64)" >> $GITHUB_ENV
+      - name: Mask SECRET_KEY_BASE
+        run: echo "::add-mask::$SECRET_KEY_BASE"
       - name: Create .env file
         run: |
           touch $GITHUB_WORKSPACE/${{ inputs.domain }}/.env
