--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -15,6 +15,8 @@ jobs:
         with:
           repository: dyersituations/catcms
           path: catcms
+      - name: Create SECRET_KEY_BASE placeholder
+        run: echo "SECRET_KEY_BASE=''" >> $GITHUB_ENV
       - name: Mask SECRET_KEY_BASE
         run: echo "::add-mask::$SECRET_KEY_BASE"
       - name: Create SECRET_KEY_BASE
