--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -15,15 +15,13 @@ jobs:
         with:
           repository: dyersituations/catcms
           path: catcms
-      - name: Create SECRET_KEY_BASE
-        run: |
-          echo "SECRET_KEY_BASE=$(openssl rand -hex 64)" >> $GITHUB_ENV
-          echo "::add-mask::${{ env.SECRET_KEY_BASE }}"
       - name: Create .env file
         run: |
+          SECRET_KEY_BASE=$(openssl rand -hex 64)
+          echo "::add-mask::$SECRET_KEY_BASE"
           touch $GITHUB_WORKSPACE/${{ inputs.domain }}/.env
           echo RAILS_ENV=production >> .env
-          echo SECRET_KEY_BASE=${{ env.SECRET_KEY_BASE }} >> .env
+          echo SECRET_KEY_BASE=$SECRET_KEY_BASE >> .env
           cat $GITHUB_WORKSPACE/${{ inputs.domain }}/.env
       - name: Build images
         run: docker-compose build -f "${{ inputs.domain }}/docker-compose.yml" --no-cache
