--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -22,4 +22,4 @@ jobs:
           echo SECRET_KEY_BASE=$(openssl rand -hex 64) >> .env
           cat $GITHUB_WORKSPACE/${{ inputs.domain }}/.env
       - name: Build images
-        run: docker-compose build -f "${{ inputs.domain }}/docker-compose.yml" --no-cache
+        run: docker-compose build -f "$GITHUB_WORKSPACE/${{ inputs.domain }}/docker-compose.yml" --no-cache
