--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -3,7 +3,6 @@ on:
     inputs:
       domain:
         required: true
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,11 +14,13 @@ jobs:
         with:
           repository: dyersituations/catcms
           path: catcms
+      - name: Create SECRET_KEY_BASE
+        run: echo "SECRET_KEY_BASE=$(echo openssl rand -hex 64)" >> $GITHUB_ENV
       - name: Create .env file
         run: |
           touch $GITHUB_WORKSPACE/${{ inputs.domain }}/.env
           echo RAILS_ENV=production >> .env
-          echo SECRET_KEY_BASE=$(openssl rand -hex 64) >> .env
+          echo SECRET_KEY_BASE=${{ env.SECRET_KEY_BASE }} >> .env
           cat $GITHUB_WORKSPACE/${{ inputs.domain }}/.env
       - name: Build images
         run: docker-compose -f "$GITHUB_WORKSPACE/${{ inputs.domain }}/docker-compose.yml" -f "$GITHUB_WORKSPACE/${{ inputs.domain }}/docker-compose.override.yml" build --no-cache
