--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -15,7 +15,7 @@ jobs:
           repository: dyersituations/catcms
           path: catcms
       - name: Create SECRET_KEY_BASE
-        run: echo "SECRET_KEY_BASE=$(echo openssl rand -hex 64)" >> $GITHUB_ENV
+        run: echo "SECRET_KEY_BASE=$(openssl rand -hex 64)" >> $GITHUB_ENV
       - name: Create .env file
         run: |
           touch $GITHUB_WORKSPACE/${{ inputs.domain }}/.env
