--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -14,13 +14,18 @@ jobs:
         with:
           repository: dyersituations/catcms
           path: catcms
-      - name: Create SECRET_KEY_BASE
-        run: echo "SECRET_KEY_BASE=$(openssl rand -hex 64)" >> $GITHUB_ENV
       - name: Create .env file
         run: |
           touch $GITHUB_WORKSPACE/${{ inputs.domain }}/.env
           echo RAILS_ENV=production >> .env
-          echo SECRET_KEY_BASE=${{ env.SECRET_KEY_BASE }} >> .env
+          echo SECRET_KEY_BASE=${{ secrets.SECRET_KEY_BASE }} >> .env
           cat $GITHUB_WORKSPACE/${{ inputs.domain }}/.env
-      - name: Build images
-        run: docker-compose -f "$GITHUB_WORKSPACE/${{ inputs.domain }}/docker-compose.yml" -f "$GITHUB_WORKSPACE/${{ inputs.domain }}/docker-compose.override.yml" build --no-cache
+      # - name: Build images
+      #   run: docker-compose -f "$GITHUB_WORKSPACE/${{ inputs.domain }}/docker-compose.yml" -f "$GITHUB_WORKSPACE/${{ inputs.domain }}/docker-compose.override.yml" build --no-cache
+      # - name: Log in to Docker Hub
+      #   uses: docker/login-action@v2
+      #   with:
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
+      # - name: Push images
+      #   run: docker-compose push
