--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -20,12 +20,12 @@ jobs:
           echo RAILS_ENV=production >> .env
           echo SECRET_KEY_BASE=${{ secrets.SECRET_KEY_BASE }} >> .env
           cat $GITHUB_WORKSPACE/${{ inputs.domain }}/.env
-      # - name: Build images
-      #   run: docker-compose -f "$GITHUB_WORKSPACE/${{ inputs.domain }}/docker-compose.yml" -f "$GITHUB_WORKSPACE/${{ inputs.domain }}/docker-compose.override.yml" build --no-cache
-      # - name: Log in to Docker Hub
-      #   uses: docker/login-action@v2
-      #   with:
-      #     username: ${{ secrets.DOCKER_USERNAME }}
-      #     password: ${{ secrets.DOCKER_PASSWORD }}
-      # - name: Push images
-      #   run: docker-compose push
+      - name: Build images
+        run: docker-compose -f "$GITHUB_WORKSPACE/${{ inputs.domain }}/docker-compose.yml" -f "$GITHUB_WORKSPACE/${{ inputs.domain }}/docker-compose.override.yml" build --no-cache
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push images
+        run: docker-compose -f "$GITHUB_WORKSPACE/${{ inputs.domain }}/docker-compose.yml" -f "$GITHUB_WORKSPACE/${{ inputs.domain }}/docker-compose.override.yml" push
