--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -16,10 +16,10 @@ jobs:
           path: catcms
       - name: Create .env file
         run: |
-          touch $GITHUB_WORKSPACE/${{ inputs.domain }}/.env
+          touch $GITHUB_WORKSPACE/.env
           echo RAILS_ENV=production >> .env
           echo SECRET_KEY_BASE=${{ secrets.SECRET_KEY_BASE }} >> .env
-          cat $GITHUB_WORKSPACE/${{ inputs.domain }}/.env
+          cat $GITHUB_WORKSPACE/.env
       - name: Build images
         run: docker-compose -f "$GITHUB_WORKSPACE/${{ inputs.domain }}/docker-compose.yml" -f "$GITHUB_WORKSPACE/${{ inputs.domain }}/docker-compose.override.yml" build --no-cache
       - name: Log in to Docker Hub
