--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -7,35 +7,44 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out catdocker repo
-        uses: actions/checkout@v4
-      - name: Check out catcms repo
-        uses: actions/checkout@v4
+      # - name: Check out catdocker repo
+      #   uses: actions/checkout@v4
+      # - name: Check out catcms repo
+      #   uses: actions/checkout@v4
+      #   with:
+      #     repository: dyersituations/catcms
+      #     path: catcms
+      # - name: Create .env file
+      #   run: |
+      #     touch $GITHUB_WORKSPACE/.env
+      #     echo RAILS_ENV=production >> .env
+      #     echo SECRET_KEY_BASE=${{ secrets.SECRET_KEY_BASE }} >> .env
+      #     cat $GITHUB_WORKSPACE/.env
+      # - name: Build images
+      #   run: |
+      #     docker-compose \
+      #       --env-file $GITHUB_WORKSPACE/.env \
+      #       -f $GITHUB_WORKSPACE/${{ inputs.domain }}/docker-compose.yml \
+      #       -f $GITHUB_WORKSPACE/${{ inputs.domain }}/docker-compose.override.yml \
+      #       build --no-cache
+      # - name: Log in to Docker Hub
+      #   uses: docker/login-action@v2
+      #   with:
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
+      # - name: Push images
+      #   run: |
+      #     docker-compose \
+      #       --env-file $GITHUB_WORKSPACE/.env \
+      #       -f "$GITHUB_WORKSPACE/${{ inputs.domain }}/docker-compose.yml" \
+      #       -f "$GITHUB_WORKSPACE/${{ inputs.domain }}/docker-compose.override.yml" \
+      #       push
+      - name: Create host folder
+        uses: appleboy/ssh-action@v1.0.0
         with:
-          repository: dyersituations/catcms
-          path: catcms
-      - name: Create .env file
-        run: |
-          touch $GITHUB_WORKSPACE/.env
-          echo RAILS_ENV=production >> .env
-          echo SECRET_KEY_BASE=${{ secrets.SECRET_KEY_BASE }} >> .env
-          cat $GITHUB_WORKSPACE/.env
-      - name: Build images
-        run: |
-          docker-compose \
-            --env-file $GITHUB_WORKSPACE/.env \
-            -f $GITHUB_WORKSPACE/${{ inputs.domain }}/docker-compose.yml \
-            -f $GITHUB_WORKSPACE/${{ inputs.domain }}/docker-compose.override.yml \
-            build --no-cache
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Push images
-        run: |
-          docker-compose \
-            --env-file $GITHUB_WORKSPACE/.env \
-            -f "$GITHUB_WORKSPACE/${{ inputs.domain }}/docker-compose.yml" \
-            -f "$GITHUB_WORKSPACE/${{ inputs.domain }}/docker-compose.override.yml" \
-            push
+          host: ${{ secrets.DIGITAL_OCEAN_HOST }}
+          username: ${{ secrets.DIGITAL_OCEAN_USERNAME }}
+          key: ${{ secrets.DIGITAL_OCEAN_KEY }}
+          script: |
+            cd /home/dockeruser
+            sudo mkdir -p ${{ inputs.domain }}
