Copy docker files to host

--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -48,3 +48,11 @@ jobs:
           script: |
             cd /home/dockeruser
             mkdir -p ${{ inputs.domain }}
+      - name: Copy Docker files
+        uses: appleboy/scp-action@v0.1.4
+        with:
+          host: ${{ secrets.DIGITAL_OCEAN_HOST }}
+          username: ${{ secrets.DIGITAL_OCEAN_USERNAME }}
+          key: ${{ secrets.DIGITAL_OCEAN_KEY }}
+          source: "$GITHUB_WORKSPACE/${{ inputs.domain }}/docker-compose.yml$GITHUB_WORKSPACE/${{ inputs.domain }}/docker-compose.override.yml"
+          target: /home/dockeruser/${{ inputs.domain }}
