--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -54,5 +54,5 @@ jobs:
           host: ${{ secrets.DIGITAL_OCEAN_HOST }}
           username: ${{ secrets.DIGITAL_OCEAN_USERNAME }}
           key: ${{ secrets.DIGITAL_OCEAN_KEY }}
-          source: "$GITHUB_WORKSPACE/${{ inputs.domain }}/docker-compose.yml$GITHUB_WORKSPACE/${{ inputs.domain }}/docker-compose.override.yml"
+          source: "$GITHUB_WORKSPACE/${{ inputs.domain }}/docker-compose.yml,$GITHUB_WORKSPACE/${{ inputs.domain }}/docker-compose.override.yml"
           target: /home/dockeruser/${{ inputs.domain }}
